--- a/Flavor-Frenzy.html
+++ b/Flavor-Frenzy.html
@@ -38,11 +38,11 @@
             <div class="row">
                 <div class="col-sm-6 text-center">
                     <h3>Quarter Pounder Patties</h3>
-                    <img width="300" height="150" src="Quarter Pounder Pattie.png">
+                    <img width="300" height="150" src="QPPattie.png">
                 </div>
                 <div class="col-sm-6 text-center">
                     <h3>Southern Style Chicken Patties</h3>
-                    <img width="300" height="150" src="Southern Style Chicken Pattie.png">
+                    <img width="300" height="150" src="SSChickenPattie.png">
                 </div>
             </div>           
             <h1 class="text-center">Toppas</h1>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="col-sm-4 text center">
                     <h3>Bacon & Cheese Toppas</h3>
-                    <img width="200" height="100" src="B&CToppa.png">
+                    <img width="200" height="100" src="BACToppa.png">
                 </div>
             </div>
         </div>
