--- a/Public/index.html
+++ b/Public/index.html
@@ -61,6 +61,12 @@
                 </div>
             </div>
         </div>
+        <div class="container mt-5 color-dark">
+            <p>Contact Us</p>
+            <p>Phone Number: 815 8542</p>
+            <p>Email Address: FlavorFrenzy30@Outlook.com</p>
+            <p>Physical Address: 2-8 Burton Street</p>
+        </div>
     </div>
 
 </body>
