--- a/Public/index.html
+++ b/Public/index.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </div>
-        <div class="container mt-5 color-dark">
+        <div class="container mt-5 bg-dark">
             <p>Contact Us</p>
             <p>Phone Number: 815 8542</p>
             <p>Email Address: FlavorFrenzy30@Outlook.com</p>
