--- a/Public/index.html
+++ b/Public/index.html
@@ -20,17 +20,17 @@
             <div class="row">
                 <div class="col-sm-4 text-center">
                     <h3>Cheese Bites</h3>
-                    <img widith="200" height="100" src="cbites.png">
+                    <img widith="200" height="100" src="cbites.png" alt="o">
                     <p>Avaliability: K Rd, Grafton, Newmarket</p>
                 </div>
                 <div class="col-sm-4 text-center">
                     <h3>Chicken Bites</h3>
-                    <img width="200" height="100" src="chbites.png">
+                    <img width="200" height="100" src="chbites.png" alt="o">
                     <p>Avaliability: K Rd, Grafton, Newmarket</p>
                 </div>
                 <div class="col-sm-4 text-center">
                     <h3>Brocolli Bites</h3>
-                    <img width="200" height="100" src="bbites.png">
+                    <img width="200" height="100" src="bbites.png" alt="o">
                     <p>Avaliability: K Rd, Grafton, Newmarket</p>
                 </div>
             </div> 
@@ -38,26 +38,26 @@
             <div class="row">
                 <div class="col-sm-6 text-center">
                     <h3>Quarter Pounder Patties</h3>
-                    <img width="300" height="150" src="QPPattie.png">
+                    <img width="300" height="150" src="QPPattie.png" alt="o">
                 </div>
                 <div class="col-sm-6 text-center">
                     <h3>Southern Style Chicken Patties</h3>
-                    <img width="300" height="150" src="SSChickenPattie.png">
+                    <img width="300" height="150" src="SSChickenPattie.png" alt="o">
                 </div>
             </div>           
             <h1 class="text-center">Toppas</h1>
             <div class="row">
                 <div class="col-sm-4 text-center">
                     <h3>Lasange Toppas</h3>
-                    <img width="200" height="100" src="LToppa.png">
+                    <img width="200" height="100" src="LToppa.png" alt="o">
                 </div>
                 <div class="col-sm-4 text-center">
                     <h3>Cordon Bleu Toppas</h3>
-                    <img width="200" height="100" src="CbleuToppa.png">
+                    <img width="200" height="100" src="CbleuToppa.png" alt="o">
                 </div>
                 <div class="col-sm-4 text center">
-                    <h3>Bacon & Cheese Toppas</h3>
-                    <img width="200" height="100" src="BACToppa.png">
+                    <h3>Bacon and Cheese Toppas</h3>
+                    <img width="200" height="100" src="BACToppa.png" alt="o">
                 </div>
             </div>
         </div>
