--- a/Public/index.html
+++ b/Public/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flavor Frenzy</title>
-    <script src="/Bootstrap/bootstrap-5.2.0-dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/Bootstrap/bootstrap-5.2.0-dist/css/bootstrap.min.css">
 </head>
 
 
@@ -60,7 +60,7 @@
                 </div>
             </div>
         </div>
-        <div class="container mt-5 bg-dark">
+        <div class="container mt-5 bg-dark text-light">
             <p>Contact Us</p>
             <p>Phone Number: 815 8542</p>
             <p>Email Address: FlavorFrenzy30@Outlook.com</p>
