updated image lines

--- a/Public/index.html
+++ b/Public/index.html
@@ -19,17 +19,17 @@
             <div class="row">
                 <div class="col-sm-4 text-center">
                     <h3>Cheese Bites</h3>
-                    <img widith="200" height="100" src="Public/cbites.png" alt="o">
+                    <img widith="200" height="100" src="/Public/cbites.png" alt="o">
                     <p>Avaliability: K Rd, Grafton, Newmarket</p>
                 </div>
                 <div class="col-sm-4 text-center">
                     <h3>Chicken Bites</h3>
-                    <img width="200" height="100" src="Public/chbites.png" alt="o">
+                    <img width="200" height="100" src="/Public/chbites.png" alt="o">
                     <p>Avaliability: K Rd, Grafton, Newmarket</p>
                 </div>
                 <div class="col-sm-4 text-center">
                     <h3>Brocolli Bites</h3>
-                    <img width="200" height="100" src="Public/bbites.png" alt="o">
+                    <img width="200" height="100" src="/Public/bbites.png" alt="o">
                     <p>Avaliability: K Rd, Grafton, Newmarket</p>
                 </div>
             </div> 
@@ -37,26 +37,26 @@
             <div class="row">
                 <div class="col-sm-6 text-center">
                     <h3>Quarter Pounder Patties</h3>
-                    <img width="300" height="150" src="Public/QPPattie.png" alt="o">
+                    <img width="300" height="150" src="/Public/QPPattie.png" alt="o">
                 </div>
                 <div class="col-sm-6 text-center">
                     <h3>Southern Style Chicken Patties</h3>
-                    <img width="300" height="150" src="Public/SSChickenPattie.png" alt="o">
+                    <img width="300" height="150" src="/Public/SSChickenPattie.png" alt="o">
                 </div>
             </div>           
             <h1 class="text-center">Toppas</h1>
             <div class="row">
                 <div class="col-sm-4 text-center">
                     <h3>Lasange Toppas</h3>
-                    <img width="200" height="100" src="Public/LToppa.png" alt="o">
+                    <img width="200" height="100" src="/Public/LToppa.png" alt="o">
                 </div>
                 <div class="col-sm-4 text-center">
                     <h3>Cordon Bleu Toppas</h3>
-                    <img width="200" height="100" src="Public/CbleuToppa.png" alt="o">
+                    <img width="200" height="100" src="/Public/CbleuToppa.png" alt="o">
                 </div>
                 <div class="col-sm-4 text center">
                     <h3>Bacon and Cheese Toppas</h3>
-                    <img width="200" height="100" src="Public/BACToppa.png" alt="o">
+                    <img width="200" height="100" src="/Public/BACToppa.png" alt="o">
                 </div>
             </div>
         </div>
