--- a/Public/index.html
+++ b/Public/index.html
@@ -56,7 +56,7 @@
                 <div class="col-sm-4 text-center">
                     <h3>Cordon Bleu Toppas</h3>
                     <img width="200" height="100" src="/Public/CbleuToppa.png" alt="o">
-                    <p>Avaliability: K Rd, Grafton, Newmarket</p>
+                    <p>Avaliability: K Rd, Grafton, Newmarke</p>
                 </div>
                 <div class="col-sm-4 text center">
                     <h3>Bacon and Cheese Toppas</h3>
