--- a/Public/index.html
+++ b/Public/index.html
@@ -8,7 +8,7 @@
 </head>
 
 
-<body>
+<body class="bg-dark text-light">
     <h1 class="text-center">Flavor Frenzy</h1>
     <p class="text-center">Here at Flavor Frenzy, we provide our customers with easy, fast, and delicious meal solutions so they don't get hungry easily</p>
     <div>
